# lospec2css

./: LICENSE  README.md  lospec2css.py  pyproject.toml
