[tool.poetry]
name = "lospec2css"
version = "0.1.0"
description = "Convert lospec color palette files into CSS files."
authors = ["Rob Wagner <rob@sombia.com>"]
license = "(MIT OR Apache 2.0)"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
